<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red">

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"

        android:contentDescription="@string/app_name"
        />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/hint"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:hint="@string/hintPas"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:background="@drawable/edit_text"
        />
    <Button

        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:layout_marginBottom="30dp"
        />




    />




</LinearLayout>