<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <data>
        <variable
            name="PetPostViewModel"
            type="com.example.pet_store.list_pet_post.viewmodel.PetPostViewModel" />
    </data>

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

      <EditText
        android:paddingLeft="10dp"
        android:paddingStart="10dp"
        android:text="@={PetPostViewModel.Name}"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/name"
        android:id="@+id/etName"
        android:layout_marginTop="@dimen/marginTop"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:entries="@array/pet_array"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/spinnerCategory"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@={PetPostViewModel.PhotoUrl}"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/edit_text"
        android:hint="@string/photos"
        android:id="@+id/etPhotos"
        android:layout_marginTop="@dimen/marginTop"/>
    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/add"
        android:onClick="@{(v) -> PetPostViewModel.onClick(v)}"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:background="@drawable/button"
        android:layout_marginBottom="@dimen/marginBottom"
        />

</LinearLayout>
</layout>